# advent-of-code-2025

./: .gitignore  aoc2025.opam  dune-project  makefile
input/: .gitignore
lib/: day.mli  day01.ml  day02.ml  day03.ml  day04.ml  day05.ml  day06.ml  day07.ml  day08.ml  day09.ml  day10.ml  day11.ml  dune
test/: day01.ml  day02.ml  day03.ml  day04.ml  day05.ml  day06.ml  day07.ml  day08.ml  day09.ml  day10.ml  day11.ml  day_test.ml  dune  test_advent_of_code_2025.ml
